# playFHE

./: pyproject.toml
playFHE/: util.py
playFHE/ckks/: ciphertext.py  ckks_scheme.py  rns_ciphertext.py  rns_ckks_scheme.py
playFHE/math/: ntt.py  poly.py  rns_poly.py
test/: test-ckks.py  test-rns-ckks.py
